# fyraliscore

./: .env.example  .gitignore  CLAUDE.md  CODEBASE-ARCHITECTURE.md  README.md  V1_PR_PROMPTS.md  conftest.py  docker-compose.yml  fyralis_forecasts_page_implementation_complete_spec_v1.md  fyralis_today_final_redesign_implementation_spec.md  fyraliscore-hardening-backlog.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: auto-commit.sh
.github/workflows/: apply-migrations.yml  ci.yml  deploy-production.yml  enforce-main-source.yml  ingestion-tests.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
bench/: __init__.py  __main__.py  cli.py  config.json  config.py  report.py  runner.py  stats.py  store.py  thresholds.json  types.py
bench/dimensions/: __init__.py  cost.py  latency.py  reasoning_quality.py  retrieval_quality.py  throughput.py
bench/fixtures/: README.md  labeled_retrieval.jsonl
bench/profiling/: __init__.py  cpu.py  db.py  memory.py  trace.py
bench/tests/: test_bench_smoke.py
db/migrations/: 0028_pelago_demo_config.sql  0029_reconciliation_events.sql  0029_remove_legacy_demos.sql  0030_audit_events.sql  0030_extend_partitions_for_pelago_snapshot.sql  0031_gmail_integration.sql  0031_model_edges.sql  0032_topology_layer.sql  0033_topology_events.sql  0034_topology_relocate.sql  0035_bench_runs.sql  0035_proposition_kind_constraints.sql  0036_rls_permissive_default.sql  0037_tenant_fks.sql  0038_signal_readings_sidecar.sql  0039_provider_installations.sql  0039_viewer_state.sql  0040_decision_deltas.sql  0040_slack_installation_tokens.sql  0041_installation_audit_log.sql  0041_predictions.sql  0049_entity_aliases_normalized_index.sql
db/seed/: predictions_seed.sql
demo/generation/: README.md  generate.py  schemas.py  spec_io.py  sql_emit.py
demo/snapshots/: meridian-v1.sql.zst  northwind-v1.sql.zst  pelago-v1.sql  pelago-v1.sql.zst  truss-v1.sql.zst
docs/decisions/: lld-amendments-pending.md
docs/ingestion/: 00-system-design.md  01-current-state.md  02-high-level-design.md  03-low-level-design.md  04-implementation-plan.md  05-lld-amendments.md
docs/mockups/: map.html
lib/embeddings/: base.py  factory.py  ollama.py  openai_backend.py
lib/llm/: provider.py
lib/shared/: edge_registry.py  errors.py  migrations.py  tenant_context.py  types.py
lib/topology/: community.py  embeddings.py  naming.py  relocate.py
mocks/: starscape.html
nginx/vhost.d/: demo.fyralis.xyz  demo.fyralis.xyz_http
scripts/: backfill_model_edges.py  check_schema_drift.py  docker-migrate.sh  dogfood_down.sh  dogfood_logs.sh  dogfood_up.sh  run_gmail_history_poller.py  run_gmail_watch_scheduler.py  run_think_worker.py  setup.sh  start.sh  stop.sh  voice_spot_check.py  webhook_install.py
services/access_control/: roles.py
services/acts/: decisions.py  goals.py  invariants.py
services/calibration/: __init__.py  hit_rate.py
services/contestability/: standing.py
services/conversations/: api.py  repo.py
services/decision_deltas/: __init__.py  apply.py  promote.py  repo.py  router.py
services/demo/: model_routing.py  router.py  sessions.py  simulator.py  snapshot.py
services/forecasts/: __init__.py  accuracy.py  page.py  repo.py  router.py
services/gateway/: bench_routes.py  bench_ws.py  db_bootstrap.py  debug_router.py  main.py  map_router.py  map_routes.py  model_page_routes.py  spec_routes.py  today_routes.py
services/greeting/: __init__.py  api.py  rendering_adapter.py  scheduler.py  stream.py  viewer_state_repo.py
services/history/: __init__.py  aggregator.py  router.py  summary.py
services/ingestion/: core.py
services/integrations/: __init__.py
services/model_trace/: __init__.py  repo.py  router.py
services/models/: PGVECTOR_REGISTRY.md  edges_repo.py  falsifier.py  propositions.py  recommendations.py  repo.py
services/observations/: events.py  repo.py
services/query/: api.py  classifier.py  core.py  prefetch.py
services/realtime/: main.py
services/recommendations/: handlers.py  repo.py
services/rendering/: api.py  core.py
services/resources/: repo.py  transactions.py
services/retrieval/: assembler.py  config.py  pathways.py  primary.py  scoring.py  second_pass.py
services/think/: RECONCILIATION_DESIGN.md  RECONCILIATION_README.md  SUBSTRATE_SEMANTICS.md  V1_BASELINE.md  applier.py  audit.py  auto_create_commitment.py  cascade.py  deterministic.py  diff_schema.py  llm_reason.py  observability.py  post_commit.py  prompt.py  reason.py  reconciler.py  region_locks.py  strict_schema.py  validator.py  worker.py
services/today/: aggregator.py  freshness.py  map.py  stake.py
services/topology/: events_repo.py  neighborhoods_repo.py  topo_repo.py  umap_projector.py
services/webhooks/: __init__.py  gmail_pubsub.py  metrics.py  router.py  secrets.py  tenant_resolution.py  tenant_resolver.py  verifier.py
simulation/: server.py
simulation/scenarios/: replay.py
simulation/workers/: _common.py  github_pr_worker.py
specs/001-landing-page/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-gmail-integration/: plan.md
specs/IN-06-webhook-gateway-router/: source.md  spec.md
specs/IN-07-tenant-resolution-webhook-edge/: plan.md  research.md  spec.md  tasks.md
specs/IN-08-slack-production-integration/: data-model.md  source.md  spec.md  tasks.md
specs/IN-09-discord-interactions-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/IN-12-discord-gateway-message-ingest/: source.md  tasks.md
specs/IN-13-github-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/integration/: conftest.py  test_ceo_view_smoke.py  test_demo_end_to_end.py  test_gateway_sim_mount.py  test_recommendation_flow.py
tests/real_llm/: conftest.py
tests/synthesis_harness/: REPORT.md  __init__.py  __main__.py  _fixtures.py  (+11 more)
ui/: index.html  mock-server.ts  package-lock.json  package.json
(+540 files in other folders)
