[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "company-os"
version = "0.0.0"
description = "Company OS — organizational intelligence runtime"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic>=2.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "websockets>=15.0",          # IN-12: Discord Gateway WSS worker
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",      # used only by scripts/check_schema_drift.py (sync)
    "anthropic>=0.34",
    "openai>=1.40",
    "pynacl>=1.5",               # IN-06: Discord ed25519 webhook verification
    "cryptography>=42.0",        # IN-08: Fernet envelope-encrypted secret store
    "pyjwt[crypto]>=2.8",        # IN-13: GitHub App JWT (RS256) minting
    "zstandard>=0.22",           # Gmail/general payload compression
    "google-auth>=2.29",         # IN-Gmail: Google OAuth/OIDC verification
    "redis>=5.0",                # M1.3: rate limiter (Lua EVALSHA on Redis); LLD §13
    # --- Ingestion M1.4 (LLD §9 dependency adds) ---
    "temporalio>=1.5",                          # Temporal Python SDK
    "confluent-kafka>=2.3",                     # idempotent producer
    "aiokafka>=0.10",                           # consumer
    "aioboto3>=12.0",                           # S3 / R2 client
    # M2.2: pinned minor — canonical JSON via OPT_SORT_KEYS is the
    # raw-body bytes for the Discord Gateway shadow path. content_hash
    # dedup + N2 replay-from-raw both require byte-equal serialization
    # across deployments. Patch updates are allowed; major/minor bumps
    # require re-verifying the round-trip test in
    # services/integrations/discord/gateway/tests/test_dispatch_shadow.py.
    "orjson>=3.11,<3.12",                       # normalizer hot path + Gateway shadow canonical bytes
    "opentelemetry-api>=1.20",                  # tracing
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-asyncpg>=0.40b0",
    "opentelemetry-instrumentation-aiokafka>=0.40b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "respx>=0.21",              # httpx mocking for unit tests
    "freezegun>=1.5",
    "hdbscan>=0.8.40",          # Wave 4-C precipitation clustering
    "scikit-learn>=1.4",        # transitive via hdbscan; used by precipitation
    "numpy>=2.0",               # transitive; model-embedding stacking
    "pyyaml>=6.0",              # real-LLM scenario YAML loader
    "fakeredis[lua]>=2.20",     # M1.3: in-process Redis with Lua EVALSHA support
    "moto[s3]>=5.0",            # M1.4: in-process S3 mock for raw_tier tests
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "services*"]
exclude = ["tests*", "ui*"]
namespaces = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "lib", "services", "scripts"]
python_files = ["test_*.py", "*_test.py"]
timeout = 30
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:asyncpg.*",
    # asyncpg / asyncio selector can log unclosed-connection warnings
    # from __del__ deallocators during pytest teardown. These are not
    # actionable from test code and surface as PytestUnraisableException.
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: requires live Postgres (DATABASE_URL)",
    "ollama: requires live Ollama (OLLAMA_URL)",
    "slow: slow test (> 1s)",
    "real_llm: real-LLM test (requires DEEPSEEK_API_KEY, runs only with RUN_REAL_LLM=1 or -m real_llm)",
    "requires_infra: requires external infrastructure not provisioned in M1 (pgbouncer, Kafka broker, Temporal cluster, real Redis, S3/R2 endpoint). Skipped unless the environment provides the named service.",
    "requires_docker: requires a running Docker daemon and (typically) the M2 dev compose stack (docker-compose.dev.yml — Kafka, moto-s3). Skipped cleanly when Docker isn't available.",
]
