[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "company-os"
version = "0.0.0"
description = "Company OS — organizational intelligence runtime"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic>=2.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",      # used only by scripts/check_schema_drift.py (sync)
    "anthropic>=0.34",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "respx>=0.21",              # httpx mocking for unit tests
    "freezegun>=1.5",
    "hdbscan>=0.8.40",          # Wave 4-C precipitation clustering
    "scikit-learn>=1.4",        # transitive via hdbscan; used by precipitation
    "numpy>=2.0",               # transitive; model-embedding stacking
    "umap-learn>=0.5",          # 2D projection for the CEO Map view (preserves local structure;
                                # PCA was the wrong abstraction — see CODEBASE-ARCHITECTURE.md §13.13)
    "pyyaml>=6.0",              # real-LLM scenario YAML loader
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "services*"]
exclude = ["tests*", "ui*"]
namespaces = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "lib", "services"]
python_files = ["test_*.py", "*_test.py"]
timeout = 30
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:asyncpg.*",
    # asyncpg / asyncio selector can log unclosed-connection warnings
    # from __del__ deallocators during pytest teardown. These are not
    # actionable from test code and surface as PytestUnraisableException.
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # umap-learn emits an ImportWarning when tensorflow isn't installed
    # (parametric variant unavailable) — we don't use parametric UMAP.
    "ignore::ImportWarning:umap.*",
    # umap also UserWarns about n_jobs vs random_state — we set both
    # deliberately for determinism.
    "ignore::UserWarning:umap.*",
    # numba emits NumbaDeprecation/PendingDeprecation warnings transitively.
    "ignore::DeprecationWarning:numba.*",
    "ignore::PendingDeprecationWarning:numba.*",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: requires live Postgres (DATABASE_URL)",
    "ollama: requires live Ollama (OLLAMA_URL)",
    "slow: slow test (> 1s)",
    "real_llm: real-LLM test (requires DEEPSEEK_API_KEY, runs only with RUN_REAL_LLM=1 or -m real_llm)",
]
